chore: remove certificate pages
